fix text align

--- a/data-elevator/src/App.css
+++ b/data-elevator/src/App.css
@@ -2,15 +2,16 @@
   background-color: grey;
 } */
 h1 {
-  margin-left: 35vw;
   color: grey;
   font-size: 70px;
+  text-align: center;
 }
 
 .input-text {
   margin: auto;
   width: 50%;
   padding: 10px;
+  text-align: center;
 }
 
 .input {
@@ -22,7 +23,7 @@ h1 {
 }
 
 .elevate {
-  margin-left: 40%;
+  text-align: center;
   margin-top: 40px;
   font-size: xx-large;
 }
